--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Handles and verifies MS token",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint . && mocha -t 20000 test/unit/**"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/Rise-Vision/ms-token-handler/issues"
   },
-  "homepage": "https://github.com/Rise-Vision/ms-token-handler#readme"
+  "homepage": "https://github.com/Rise-Vision/ms-token-handler#readme",
+  "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^4.0.1"
+  }
 }
